--- a/ungabunga.html
+++ b/ungabunga.html
@@ -54,9 +54,34 @@ if(keys['KeyD']){froop.x=froop.x+12}
 if(froop.x<0){froop.x=0}if(froop.x>1200){froop.x=1200}
 requestAnimationFrame(move)}move()
 
+
+
 function gravity(){froop.y=froop.y+6.25;if(froop.y>625){froop.y=625}
-    if(froop.y<0){froop.y=0}
-    requestAnimationFrame(gravity)}gravity()
+   
+    if (froop.y >= 625) {
+
+froop.y=625;
+
+window.location.href = "DeathScreen.html"
+return;
+    }
+
+
+if(froop.y<0){froop.y=0}
+
+    requestAnimationFrame(gravity)}gravity();
+
+
+
+        
+
+
+
+
+
+
+
+
 
 function images(){ctx.clearRect(0,0,canvas.width,canvas.height);
   if(platformart.complete){ctx.drawImage(platformart,platform.x,platform.y,platform.w,platform.h)}
