--- a/DeathScreen.html
+++ b/DeathScreen.html
@@ -11,7 +11,7 @@
 </button>
 
 <h1 style="font-size: 2rem;">you died nerd!</h1>
-   <img src="art/sob.png" 
+   <img src="art/froop_ded.png" 
   width="900"
  height="800">
 
