--- a/mods.html
+++ b/mods.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Settings</title>
+    <style>#game{display:block;background:#ff0000;width:100vw;height:100vh}</style>
+    <title>Funny Platformer</title>
 </head>
 <body>
-<button  id="mods" onclick="clickFunction()" >mods
-
-    <a href="mods.html"></a>
-</button>
+<canvas id="game"></canvas>
+<script>
 
 
-
-    
+</script>
 </body>
 </html>
