--- a/ungabunga.html
+++ b/ungabunga.html
@@ -42,28 +42,45 @@ addEventListener('keyup',e=>{keys[e.code]=false;});
 const platformart=new Image();
 platformart.src='art/Log.png'
 const platform={x:500,y:0,w:275.2,h:114.4}
+const log2={x:500,y:0,w:275.2,h:114.4}
+const log3={x:500,y:0,w:275.2,h:114.4}
+
+let score=0;
+function scoreCounter(){score=score+(1/60);
+  requestAnimationFrame(scoreCounter)}scoreCounter()
+
 function logFall(){if(ded==0){
-if(platform.y<655){platform.y=platform.y+3.125}else if(platform.y>=655){platform.x=Math.floor((Math.random()*1070));platform.y=0;}
-requestAnimationFrame(logFall)}else{platform.x=-500;platform.y=-500}
+if(platform.y<655){platform.y=platform.y+3.125}else if(platform.y>=655){platform.x=Math.floor((Math.random()*1070));
+platform.y=0;}
+if(log2.y<655){log2.y=log2.y+3.125}else if(log2.y>=655){log2.x=Math.floor((Math.random()*1070));log2.y=0}
+if(log3.y<655){log3.y=log3.y+3.125}else if(log3.y>=655){log3.x=Math.floor((Math.random()*1070));log3.y=0}
+}else{log3.x=log3.y=log2.y=platform.x=platform.y=log2.x=-500;}requestAnimationFrame(logFall)
 }logFall()
 
-function move(){if(ded==0){
+
+
+function move(){if(keys['KeyR']){froop.y=400;froop.x=600;platform.x=600;platform.y=200;ded=0}
+if(ded==0){
 if(keys['KeyW']){froop.y=froop.y-12}
 if(keys['KeyA']){froop.x=froop.x-12}
 if(keys['KeyD']){froop.x=froop.x+12}
-if(froop.x<0){froop.x=0}if(froop.x>1200){froop.x=1200}
-requestAnimationFrame(move)}
+if(froop.x<0){froop.x=0}if(froop.x>1200){froop.x=1200}}
+requestAnimationFrame(move)
 }move()
 
 function gravity(){
   if(froop.y<platform.y+(platform.h/2)&&froop.y>platform.y-(platform.h/2)&&froop.x<platform.x+(platform.w/2)&&
-  froop.x>platform.x-(platform.w/2)){froop.y=platform.y+(platform.h/2)}else{froop.y=froop.y+6.25}
+  froop.x>platform.x-(platform.w/2)){froop.y=platform.y+(platform.h/2);platformart.src='art/LogHit.png'}else
+  {froop.y=froop.y+6.25;platformart.src='art/Log.png'}
+
   if(froop.y>625){froop.y=625}
-if(froop.y>=625){froop.y=625;ded=1;dedsfx.play()}
+if(froop.y>=625){froop.y=625;ded=1;alert(score);dedsfx.play()}
 if(froop.y<0){froop.y=0}
     requestAnimationFrame(gravity)}gravity();
 
 function images(){ctx.clearRect(0,0,canvas.width,canvas.height);
+  if(platformart.complete){ctx.drawImage(platformart,log3.x,log3.y,log3.w,log3.h)}
+  if(platformart.complete){ctx.drawImage(platformart,log2.x,log2.y,log2.w,log2.h)}
   if(platformart.complete){ctx.drawImage(platformart,platform.x,platform.y,platform.w,platform.h)}
   if(playerart.complete){ctx.drawImage(playerart,froop.x,froop.y,froop.w,froop.h);}
   if(dedart.complete&&ded==1){ctx.drawImage(dedart,0,0,1370,780)}
